# SleepAnalyzerWeb

./: README.md  app.py  config.py  pyproject.toml
adapters/: csv_loader.py  docx_generator.py
domain/: models.py  services.py
static/: style.css
templates/: base.html  legend.html  report.html  upload.html
test_data/: sleep_data.csv  sleep_data_extended.csv  sleep_data_older_female.csv  sleep_data_young_male.csv
visualization/: plotter.py
