[project]
name = "sleepanalyzerweb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flask>=3.1.3",
    "fpdf2>=2.8.7",
    "kaleido>=1.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "weasyprint>=68.1",
]
